# crack-the-coding-interview-2

./: .gitignore  defenitions.md  pyproject.toml  question_approaches_types.md
10_sorting/: 1_sorting.py
11_testing/: defenition.md  test_testing_functions.py  testing_functions.py
12_hashtable/: hastable.py
13_tries/: trie.py
14_backtracking/: defenition.py
1_arrays/: 1_is_unique.py  2_check_permutation.py  3_urlify.py  4_palindrome_permutstion.py  5_one_away.py  6_string_compression.py  8_zero_matrix.py  9_string_rotation.py  binary_search.py  sliding_window.py
2_linked_lists/: 1_remove_dups.py  2_kth_to_last.py  3_delete_middle_node.py  4_partition.py  5_sum_lists.py  6_palindrome.py  7_intersection.py  8_loop_detection.py  linked_list.py
3_stack_and_queues/: 3_stack_of_plates.py  6_animal_shelter.py  defenition.py
4_binary_and_graph_traversal/: 2_minimal_tree.py  3_list_of_depths.py  defenition_bst.py  defenition_graph.py  defenition_heap.py  linked_list.py
5_recursion/: defenition.py
6_sorting/: 1_bubble_sort.py  2_selection_sort.py  3_insertion_sort.py  4_merge_sort.py  5_quick_sort.py
7_object_oritented_design/: 2_call_center.py  3_juke_box.py  defenition.md
9_system_design/: defenition.py
stack_and_queues/: 2_stack_min.py  4_queues_via_stack.py  5_sort_stack.py  defenition.py
