[project]
name = "crack-the-coding-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "tarun-veeraraghavan-mv",email = "tarun.veeraraghavan.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false